# mrroboto

./: .gitignore  .gitmodules  BUILDING  LAYOUT  README  deps.env.sample  loadInstance-remote.sh  loadInstance.sh  placefiles.sh  solaris-image.sample  solaris-prepOVF.sh  solaris-prepimage.sh  solaris-publish.sh  solaris-registerimage.sh  solaris-uploadimage.sh
content/: description.txt  license.txt
dscripts/: aggregation.d  commandpath.d  keyflow.d  memcoperations.d
imagebuild/: ec2lighttpdauth.xml  gen-htdigest-va.sh  gen-htdigest.sh  lighttpd.conf.patch  masterbuild.sh  memcached-svc  memcached.xml  pkg.env  pkg_ec2lighttpdauth.sh  prepimage.sh  service-setup.sh  twistd-setup.sh
imagebuild/dscripts/: keysflowing.d  memcoperations-check.d  memcoperations.d
imagebuild/ec2lighttpdauth/: ec2lighttpdauth.xml
imagebuild/memcached/: .gitignore  Makefile.am  build.sh  configure.in  memcached.c  service-setup.sh
imagebuild/twistd/: build.sh  twistd-setup.sh
web/: mrr.html
web/css/: text.css  ui.tabs.css
web/js/: jquery.localscroll.js  jquery.scrollTo.js
